plugins {
    id 'java'
    id 'idea'
    id 'io.quarkus' version '2.11.1.Final' apply false
    // must be the same version as in bom:gradle.properties
    id 'io.freefair.lombok' version '6.5.1'
    id('org.asciidoctor.jvm.convert') version '3.3.2'
    id('org.asciidoctor.jvm.gems') version '3.3.2'
    id('org.asciidoctor.jvm.pdf') version '3.3.2'
    id('com.diffplug.spotless') version "6.19.0"
}
// Apply the java plugin to add support for Java
apply plugin: 'java'
apply plugin: 'idea'

// In this section you declare where to find the dependencies of your project
repositories {
    mavenLocal()
    mavenCentral()
    ruby {
        gems()
    }
}
dependencies {
    asciidoctorGems 'rubygems:asciidoctor-revealjs:1.1.3'
}
allprojects {
    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
}
subprojects {
    version = '0.0.5-SNAPSHOT'
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

asciidoctor {
    sourceDir file('docs')
    outputDir file('build/docs')
    baseDirFollowsSourceFile()

    attributes 'build-gradle': file('build.gradle'),
            'endpoint-url': 'http://example.org',
            'source-highlighter': 'coderay',
            'coderay-css': 'style',
            'imagesdir': 'images',
            'toc': 'left',
            'icons': 'font',
            'setanchors': '',
            'idprefix': '',
            'idseparator': '-',
            'docinfo': 'shared'
//    asciidoctorj {
//        setOptions = [ doctype: 'article' ]
//        attributes toc : left
//    }
    /**
     * AsciidoctorJ, enables diagrams in asciidoctor documentation.
     */
    asciidoctorj {
//        requires 'asciidoctor-revealjs'
        modules {
            diagram.use()
            diagram.version '1.5.16'
        }
    }
}
/**
 * OpenJDK 9/10 Mac issue:
 * Caused by: java.lang.UnsatisfiedLinkError: /path/to/openjdk10/lib/libfontmanager.dylib: dlopen(/path/to/openjdk10/lib/libfontmanager.dylib, 1): Library not loaded: /Users/jenkins/workspace/openjdk10_build_x86-64_macos/openjdk/installedfreetype/lib/libfreetype.6.dylib
 *   Referenced from: /path/to/openjdk10/lib/libfontmanager.dylib
 *   Reason: image not found
 * The solution is to install freetype via HomeBrew or MacPorts. You might also need to do something (ridiculous) such as
 *
 * $ sudo mkdir -p /Users/jenkins/workspace/openjdk10_build_x86-64_macos/openjdk/installedfreetype
 * $ sudo ln -s /opt/local/lib /Users/jenkins/workspace/openjdk10_build_x86-64_macos/openjdk/installedfreetype/lib
 */
